# Course_project_3

./: .gitignore  main.py  pyproject.toml  settings.py
src/: classes.py  utils.py
tests/: test_utils.py
