[tool.poetry]
name = "course-project-3"
version = "0.1.0"
description = ""
authors = ["Giacinta <arthur.s@greengreyholding.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
